# phi-adapter-sdk

./: .gitignore  ADAPTER_README_TEMPLATE.md  CMakeLists.txt  PROTOCOLL.md  README.md
cmake/: phi-adapter-sdkConfig.cmake.in
debian/: changelog  control  copyright  phi-adapter-sdk-dev.install  phi-adapter-sdk-qt-dev.install  phi-adapter-sdk-qt.install  phi-adapter-sdk.install  rules
debian/phi-adapter-sdk-qt-dev/DEBIAN/: control  md5sums
debian/phi-adapter-sdk-qt-dev/usr/lib/aarch64-linux-gnu/cmake/phi-adapter-sdk-qt/: phi-adapter-sdk-qtTargets-none.cmake
debian/phi-adapter-sdk-qt/DEBIAN/: control  md5sums  shlibs
debian/phi-adapter-sdk-qt/usr/lib/aarch64-linux-gnu/: libphi_adapter_sdk_qt.so.0  libphi_adapter_sdk_qt.so.0.1.0
examples/phi-adapter-sidecar/: main.cpp
include/phi/adapter/sdk/: runtime.h  sidecar.h
include/phi/adapter/v1/: channel.h  color.h  contract.h  device.h  discovery.h  discovery_query.h  enum_names.h  frame.h  group.h  ipc_command.h  room.h  scene.h  schema.h  types.h  value.h  version.h
src/: runtime.cpp  runtime_internal.h  sidecar.cpp
src/linux/: uds_epoll_transport.cpp  uds_epoll_transport.h
src/qt/: instance_execution_backend_qt.cpp
